webook/k8s-webook-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  # 数据库一般只有一个
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          # 使用mysql:8.0的镜像
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
             # 这边要对 应到mysql的存储位置
            - mountPath: /var/lib/mysql
              name: mysql-storage
          ports:
            - containerPort: 3306 # 暴露3306端口
      restartPolicy: Always
      volumes:
        - name: mysql-storage # 指定存储的名字
          persistentVolumeClaim: # 指定pvc
            claimName: webook-mysql-claim
