webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 这是集群内部的端口号
      port: 6380
      targetPort: 6379 # 这是deployment中暴露的端口号
      # 这是集群外部访问的端口号
      nodePort: 30002
  type: NodePort
