webook/k8s-webook-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 3308 # 这个是集群内部的端口
      targetPort: 3306 #和 deployments中的ports端口相同
      nodePort: 30001 # 这个是集群外部访问的端口
  type: NodePort
