webook/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: live.webook.com #定义访问的域名
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: webook
                port:
                  number: 8080
